unpackaged/main/default/objects/Coaching_Notes__c/fields/Agreements__c.field-meta.xml
<CustomField>
    <fullName>Agreements__c</fullName>
    <label>Agreements</label>
    <type>TextArea</type>
</CustomField>