unpackaged/main/default/objects/Coaching_Notes__c/fields/Coaching_Completed__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coaching Completed?</label>
    <type>Checkbox</type>
</CustomField>