unpackaged/main/default/objects/Coaching_Notes__c/fields/Coaching_Opportunity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Opportunity_Notes__c</fullName>
    <label>Coaching Opportunity Notes</label>
    <type>TextArea</type>
</CustomField>