unpackaged/main/default/objects/Coaching_Notes__c/fields/Coaching_Owner__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coaching Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coaching_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>