unpackaged/main/default/objects/Coaching_Notes__c/fields/Coaching_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coaching Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coaching_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>