unpackaged/main/default/objects/Coaching_Notes__c/fields/Coaching_Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Requested_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coaching Requested by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coaching_Notes2</relationshipName>
    <type>Lookup</type>
</CustomField>