unpackaged/main/default/objects/Coaching_Notes__c/fields/Feedback_Category__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Category__c</fullName>
    <label>Feedback Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Slow responses</fullName>
            </value>
            <value>
                <fullName>Lack of urgency</fullName>
            </value>
            <value>
                <fullName>Lack of knowledge</fullName>
            </value>
            <value>
                <fullName>Communication issues</fullName>
            </value>
            <value>
                <fullName>Did not understand the request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>