unpackaged/main/default/objects/Coaching_Notes__c/fields/Needs_manager_review__c.field-meta.xml
<CustomField>
    <fullName>Needs_manager_review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs manager review</label>
    <type>Checkbox</type>
</CustomField>